# rust-actix-sqlx

./: .env  Cargo.toml  Makefile
migrations/: 20240414184201_init.up.sql
src/: lib.rs  main.rs
src/domain/: user.rs
src/middlewares/: auth_middleware.rs
src/repositories/: user_repository.rs
src/routes/: health_check.rs  mod.rs
src/routes/auth_handler/: auth_handler.rs
src/routes/user_handler/: user_handler.rs
src/services/: user_service.rs
src/utils/: hash.rs
